--- a/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.html
+++ b/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="./desktop.css">
+		<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 		<script src="./desktop.js"></script>
 	</head>
 	<body>
@@ -12,6 +13,7 @@
 		<script>
 			var myDesktop = new Desktop(
 				/* TODO: myDesktop 인스턴스의 생성자의 변수로 무엇이 들어가야 할까요? */
+				2, 1
 			);
 		</script>
 	</body>
